# mechap_engine

./: .gitignore  CMakeLists.txt  project.4coder
engine/: CMakeLists.txt  Core.c  Input.c  Sprite.c  Vec2.c  Window.c
engine/include/: Core.h  Input.h  Sprite.h  Vec2.h  Window.h
test/: CMakeLists.txt  main.c
